--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/vite": "^4.0.17",
     "@types/socket.io": "^3.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -28,7 +32,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -38,14 +44,14 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "nodemon": "^3.1.9",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.14"
