--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     }
   ],
   "compilerOptions": {
-    "strict": true
-    
-  },
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
